### Include common Makefile configuration
#
include   $(top_srcdir)/build/Makefile.am.common



### Temporary library to build
#
noinst_LTLIBRARIES = libsnoopy-actions-all.la
libsnoopy_actions_all_la_SOURCES = \
    log-message-dispatch.c \
    log-message-dispatch.h \
    log-syscall-exec.c \
    log-syscall-exec.h
libsnoopy_actions_all_la_LDFLAGS =
