### Include common Makefile configuration
#
include   $(top_srcdir)/build/Makefile.am.common



### Variables to add final targets to
#
noinst_LTLIBRARIES =
sbin_PROGRAMS =



### Program-based entry points
#
sbin_PROGRAMS += snoopy
snoopy_SOURCES = \
	action-disable.c \
	action-disable.h \
	action-enable.c \
	action-enable.h \
	action-status.c \
	action-status.h \
	action-version.c \
	action-version.h \
	cli-subroutines.c \
	cli-subroutines.h \
	snoopy.c
