AM_CFLAGS = -I$(top_srcdir)/src


### Create one library with all snoopy inputs collected in it
#
noinst_LTLIBRARIES = libsnoopy_inputs_all.la


### Inputs collection is made of the following files
#
libsnoopy_inputs_all_la_SOURCES = \
	cmdline.c \
	cwd.c \
	egid.c \
	euid.c \
	filename.c \
	gid.c \
	sid.c \
	tty.c \
	uid.c
